# A_Lang_Compiler

./: README.md
Phase1/: al.l  makefile
Phase2/: CMakeLists.txt  al.y  ast.cpp  ast.h  lexer.cpp  parser.cpp  parser.hpp  symbol_table.cpp  symbol_table.h
Phase2/Working/: Random.asc  ShadowedNameOffunctions.asc
Phase3/: CMakeLists.txt  al.y  icode.cpp  icode.h  linked_list.h  parser.cpp  parser.hpp  phase3.sln  phase3.vcxproj  symbol_table.cpp
Phase4/: CMakeLists.txt  al.l  al.y  ast.cpp  ast.h  icode.cpp  icode.h  lexer.cpp  linked_list.cpp  parser.cpp  parser.hpp  phase4.sln  phase4.vcxproj  symbol_table.h  tcode.cpp  tcode.h  tests.7z
Phase4/tests/: binarycode.abc  factorial.alpha  factorial.alpha.abc  for.alpha  for.alpha.abc  function.aplha  function.aplha.abc  functionWithReturn.alpha  ifTest.aplha  ifTest.aplha.abc  inputTest.alpha  inputTest.alpha.abc  testLibFunc.alpha  testLibFunc.alpha.abc
Phase5/: CMakeLists.txt  avm.cpp  avm.h  avm_helpers.cpp  avm_helpers.h  avm_lib.cpp  avm_lib.h  avm_memory.cpp  avm_memory.h  avm_op.cpp  avm_op.h  avm_stack.cpp  avm_stack.h  avm_table.cpp  avm_table.h  handlealloc32.cpp  handlealloc32.h  main.cpp  phase5.sln  phase5.vcxproj
